[gd_scene load_steps=12 format=2]

[ext_resource path="res://assets/ships/Ships/Ship_06.png" type="Texture" id=1]
[ext_resource path="res://player/Player.gd" type="Script" id=2]
[ext_resource path="res://assets/sounds/Hit.wav" type="AudioStream" id=3]
[ext_resource path="res://assets/sounds/lazor.wav" type="AudioStream" id=4]
[ext_resource path="res://assets/sounds/Powerup.wav" type="AudioStream" id=5]
[ext_resource path="res://assets/sounds/Tesseract.wav" type="AudioStream" id=6]
[ext_resource path="res://assets/ui/boost.png" type="Texture" id=7]
[ext_resource path="res://effects/Exhaust.tscn" type="PackedScene" id=8]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 20, 30.5 )

[sub_resource type="CapsuleShape2D" id=2]
radius = 28.0

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 19.5, 31 )

[node name="Player" type="KinematicBody2D"]
collision_mask = 0
script = ExtResource( 2 )

[node name="Exhaust" parent="." instance=ExtResource( 8 )]
scale = Vector2( 1.3, 1.3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -1.5 )
shape = SubResource( 1 )

[node name="sprite" type="Sprite" parent="."]
scale = Vector2( 0.08, 0.08 )
texture = ExtResource( 1 )

[node name="BlackholeDetect" type="Area2D" parent="."]
collision_mask = 98

[node name="CollisionShape2D" type="CollisionShape2D" parent="BlackholeDetect"]
visible = false
shape = SubResource( 2 )

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
visible = false
position = Vector2( -0.5, -1 )
shape = SubResource( 3 )

[node name="Cannon" type="Node2D" parent="."]
position = Vector2( 0, -33 )

[node name="HitAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )

[node name="Lazor" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )

[node name="Powerup" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
volume_db = -15.0

[node name="Tesseract" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )

[node name="ui" type="CanvasLayer" parent="."]

[node name="TextureProgress" type="TextureProgress" parent="ui"]
margin_right = 400.0
margin_bottom = 40.0
texture_progress = ExtResource( 7 )

[connection signal="area_entered" from="BlackholeDetect" to="." method="_on_BlackholeDetect_area_entered"]
[connection signal="body_entered" from="BlackholeDetect" to="." method="_on_BlackholeDetect_body_entered"]
[connection signal="area_entered" from="Hitbox" to="." method="_on_Hitbox_area_entered"]
